--- a/frontend/src/pages/productPage.css
+++ b/frontend/src/pages/productPage.css
@@ -127,6 +127,22 @@ button{
     scrollbar-width: none;  /* Firefox */
     -ms-overflow-style: none;
 }
+.image-modal{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+    img{
+        max-width: 100%;
+    }
+}
 @media (max-width: 768px) {
   .split-toggle {
     display: flex;
@@ -150,4 +166,5 @@ button{
         
     font-size: medium;
     }
+    
 }
