--- a/frontend/src/pages/userProfilePage.css
+++ b/frontend/src/pages/userProfilePage.css
@@ -31,6 +31,7 @@
     display: flex;
     flex-direction: column;
     margin-left: 50px;
+    overflow-y: scroll;
 }
 .order_item{
     display: flex;
